--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <a class="p-4 text-center" href="index.html"><h1>Menú Principal de la Página</h1></a>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="Página1.html">Página 1</a>
+                <a class="nav-link" href="Pagina1.html">Página 1</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Página2.html">Página 2</a>
+                <a class="nav-link" href="Pagina2.html">Página 2</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Página3.html">Página 3</a>
+                <a class="nav-link" href="Pagina3.html">Página 3</a>
             </li>
         </ul>
     </header>
